fix spacing a bit

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,12 @@ body, html {
   	border: 3px solid transparent;
   	background-clip: padding-box;
   	padding: 15px;
+  	min-height: 240px;
+}
+
+.align-vertical-center {
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 .project-short-desc {
